# Stroke-Recovery-Program-Cards

./: README.md  index.html  pyproject.toml
.github/workflows/: ci.yml
cli/: exercise_sheet.py
docs/: GITHUB_SETUP.md  QUICK_PUSH.md
tests/: test_exercise_sheet.py  test_web_interface.py
web/: caregiver-app.html  index.html  preview.html
