[project]
name = "srp-cards"
version = "1.0.0"
description = "Stroke Recovery Program Cards — Personalized rehabilitation exercise card generator"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "reportlab>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.scripts]
exercise-sheet = "cli.exercise_sheet:main"

[tool.setuptools.packages.find]
include = ["cli*"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
